--- a/style.css
+++ b/style.css
@@ -2,10 +2,14 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    list-style: none! important; 
-    text-decoration: none! important;
+    list-style: none ! important;
+    text-decoration: none ! important;
     font-family: "Euclid";
 
+}
+
+body {
+    position: relative;
 }
 
 @font-face {
@@ -86,22 +90,22 @@ ul li {
 
 .grid_works {
     display: flex;
-width: 80%;
-flex-wrap: wrap;
-justify-content: center;
-margin: auto;
+    width: 80%;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: auto;
 }
 
 .w {
     position: relative;
-    width: 400px; 
+    width: 400px;
     height: 200px;
     border-radius: 20px;
     margin: 100px;
     font-size: 35px;
     margin-top: 30px;
     box-shadow: 0px 15px 28px rgba(11, 10, 10, 0.15);
-border-radius: 16px;
+    border-radius: 16px;
 
 
 }
@@ -137,22 +141,22 @@ border-radius: 16px;
     border-radius: 40px;
     left: 20px;
     top: 20px;
-text-align: center;
+    text-align: center;
 }
 
-.purple-circle{
+.purple-circle {
     background-color: #CEDAFF;
 }
 
-.blue-circle{
+.blue-circle {
     background-color: #F0F9FF;
 }
 
-.green-circle{
+.green-circle {
     background-color: #C2F5E4;
 }
 
-.red-circle{
+.red-circle {
     background-color: #FFD0DD;
 }
 
@@ -160,7 +164,7 @@ text-align: center;
 
 /* #region section3 services */
 
-.section-services{
+.section-services {
     background: rgba(239, 243, 255, 1);
     width: 100%;
     height: auto;
@@ -170,15 +174,15 @@ text-align: center;
 
 
 
-.all-services-boxes{
+.all-services-boxes {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
 
 }
 
-.sevice-box{
-    display:inline-flex;
+.sevice-box {
+    display: inline-flex;
     flex-direction: column;
     margin: 20px;
     margin-top: 70px;
@@ -201,17 +205,65 @@ text-align: center;
 /* #region section4 works */
 
 
-.section4{
+.section4 {
     width: 100%;
     height: auto;
+    text-align: center;
 }
 
-.about-text{
-    width: 50%;
-    height: 550px;
+.about-txt-pic {
+    display: flex;
+    width: 100%;
+    padding: 20px;
 }
-.about-pictures{
-    width: 50%;
+
+.about-text {
+    width: 60%;
+    height: 550px;
+    font-size: 20px;
+    text-align: left;
+    padding: 50px;
+}
+
+.more-about {
+    background: #ffffff;
+    border: 3px solid #3366FF;
+    border-radius: 11px;
+    padding: 20px 45px;
+    color: #3366FF;
+    display: inline-block;
+    text-align: center;
+}
+
+.about-pictures {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 50px;
+    width: 40%;
+    height: 100%;
+}
+
+/* #endregion */
+
+/* #region footer */
+
+footer {
+    width: 100%;
+    height: auto;
+    background-color: #F4FAFC;
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+    padding: 50px;
+
+}
+
+.foot-div {
+    
+    display: flex;
+    flex-direction: column;
+    gap:20px;
+    align-items:flex-start;
 }
 
 /* #endregion */
